# domashka

./: .flake8  .gitignore  README.md  decorators.py  main.py  pyproject.toml  requirements.txt  test_logging.py
.reports/: mypy_junit.xml
.reports/mypy_html/: index.html
.reports/mypy_html/html/: main.py.html
.reports/mypy_html/html/src/: masks.py.html  widget.py.html
.reports/mypy_html/html/tests/: test_masks.py.html  test_widget.py.html
.reports/mypy_xml/: index.xml
.reports/mypy_xml/xml/: main.py.xml
.reports/mypy_xml/xml/src/: __init__.py.xml  masks.py.xml  widget.py.xml
.reports/mypy_xml/xml/tests/: __init__.py.xml  test_masks.py.xml  test_widget.py.xml
data/: transactions_excel.xlsx
scripts/: download_transactions.py
src/: external_api.py  file_handlers.py  generators.py  masks.py  process_data.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_file_handlers.py  test_generators.py  test_masks.py  test_process_data.py  test_processing.py  test_utils.py  test_widget.py
