[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.7"
strict_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
show_error_context = true

[tool.poetry]
name = "bank-widget-project"
version = "0.1.0"
description = ""
authors = ["Your Name"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]